--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.4",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "bootstrap": "^5.1.3",
     "vite": "^2.8.0"
   }
 }
