--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "jquery": "^3.6.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.4",
+    "@rollup/plugin-inject": "^4.0.4",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "bootstrap": "^5.1.3",
