--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "jquery": "^3.6.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "vue-sweetalert2": "^5.0.2",
+    "vue3-popper": "^1.4.2",
+    "vuejs-paginate-next": "^1.0.2",
+    "vee-validate": "^4.5.10"
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.4",
+    "@rollup/plugin-inject": "^4.0.4",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "bootstrap": "^5.1.3",
