--- a/package.json
+++ b/package.json
@@ -10,19 +10,15 @@
   "dependencies": {
     "axios": "^0.26.1",
     "jquery": "^3.6.0",
-    "vee-validate": "^4.5.10",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vue-sweetalert2": "^5.0.2",
     "vue3-popper": "^1.4.2",
+    "vee-validate": "^4.5.10",
     "vuejs-paginate": "^2.1.0",
     "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.0",
-    "vuex-persistedstate": "^4.1.0",
-    "vue-sweetalert2": "^5.0.2",
-    "vue3-popper": "^1.4.2",
-    "vuejs-paginate-next": "^1.0.2",
-    "vee-validate": "^4.5.10"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.4",
@@ -31,5 +27,25 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "bootstrap": "^5.1.3",
     "vite": "^2.8.0"
-  }
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
