--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^1.5.6",
     "axios": "^0.26.1",
     "jquery": "^3.6.0",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vue-sweetalert2": "^5.0.2",
     "vue3-popper": "^1.4.2",
-    "vee-validate": "^4.5.10",
     "vuejs-paginate": "^2.1.0",
     "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.0",
