--- a/.env.developent
+++ b/.env.developent
@@ -1,3 +1,3 @@
 NODE_ENV = development
 BASE_URL = /
-VUE_APP_API_BASE_URL = http://localhost:3000/
+VUE_APP_API_BASE_URL = https://jasonchen23.herokuapp.com/
