--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 VITE_NODE_ENV = development
 BASE_URL = /
-VITE_APP_API_BASE_URL = https://jasonchen23.herokuapp.com/
+VITE_APP_API_BASE_URL = http://localhost:3000
