--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vuejs-paginate": "^2.1.0",
     "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "three": "^0.134.0",
+    "troisjs": "^0.3.3"
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.4",
@@ -27,6 +29,7 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "bootstrap": "^5.1.3",
+    "@vue/compiler-sfc": "^3.2.20",
     "vite": "^2.8.0"
   },
   "eslintConfig": {
